2008-01-10  Junichi Uekawa  <dancer@debian.org>

	* parameter.c (parse_parameter): add error checking.

2007-12-04  Junichi Uekawa  <dancer@debian.org>

	* tests/900_test_pbuilder.sh: use debootstrap instead of
	cdebootstrap, which is currently broken.

2007-12-03  Junichi Uekawa  <dancer@debian.org>

	* cow-shell.1: add a comment on ENOMEM

2007-11-02  Junichi Uekawa  <dancer@debian.org>

	* cowbuilder.c (cpbuilder_build): write to "/.ilist" inside chroot, not
	ilistpath.

2007-10-28  Junichi Uekawa  <dancer@debian.org>

	* parameter.c (parse_parameter): fix parameter passing for --debbuildopts.

2007-10-25  Junichi Uekawa  <dancer@debian.org>

	* qemubuilder.c (cpbuilder_build): support debbuildopts
	* parameter.c (parse_parameter, load_config_file): 
	* parameter.h: support debbuildopts

	* qemubuilder.c: add support for --components in qemubuilder.
	* parameter.c (parse_parameter): add --components option.
	(load_config_file): support COMPONENTS option

2007-10-15  Junichi Uekawa  <dancer@debian.org>

	* debian/qemubuilder.files: install bash-completion file to qemubuilder

	* Makefile: install bash_completion.

	* bash_completion.qemubuilder: create (a start of) qemubuilder bash completion script.

	* bash_completion.cowbuilder: add cowbuilder bash completion script.

2007-09-10  Junichi Uekawa  <dancer@debian.org>

	* cowbuilder.c (main): specify cowdancer-reuse
	(cpbuilder_internal_cowcopy): remove .ilist file here.
	(get_ilistfile_path, cpbuilder_internal_cowcopy)
	(cpbuilder_build): consolidate common code to get_ilistfile_path.

	* qemubuilder.c (run_second_stage_script): set date / time inside
	chroot with date command; it will be different by a few seconds.

2007-09-07  Junichi Uekawa  <dancer@debian.org>

	* cow-shell.c: fix case where .ilist didn't exist before.
	
	* qemubuilder.c: fix typo from "Jean-Baptiste Note"
	<jbnote@gmail.com>
	(run_second_stage_script): get network device name with ifconfig
	and grep. Can I assume 'ethX' here?
